@@ -1,6 +1,8 @@
 <li class="kchild" data-source="{gensource}">
     <div class="kel kexpand {isExpanded} {ktype}">
-        <span class="kname">{connector1}{name}{connector2}</span>
+        {connector1}
+        <span class="kname">{name}</span>
+        {connector2}
         <em class="karrow ktype">=</em>
         <span>{additional}</span>
         <em class="ktype">({type})</em>
