@@ -21,7 +21,13 @@
 			<label class="koptionleft">
 				<input class="ksearchkeys" type="checkbox" autocomplete="off" name="searchkeys" value="searchkeys" checked="checked">Search keys
 			</label>
-			<label class="koptionright"><input class="ksearchlong" type="checkbox" autocomplete="off" name="searchlong" value="searchlong" checked="checked">Search long results</label>
+			<label class="koptionright">
+				<input class="ksearchlong" type="checkbox" autocomplete="off" name="searchlong" value="searchlong" checked="checked">Search long results
+			</label>
+			<br/>
+			<label class="koptionleft">
+				<input class="ksearchwhole" type="checkbox" autocomplete="off" name="searchwhole" value="searchwhole">Search whole values
+			</label>
 		</div>
 	</div>
 </li>
